# lamina

./: .gitignore  .replit  Cargo.toml  README.md
crates/lamina/: Cargo.toml  README.md
crates/lamina-huff/: Cargo.toml  README.md
crates/lamina-huff/examples/: compile_ir_to_huff.rs  compile_to_huff.rs
crates/lamina-huff/src/: backend.rs  lib.rs  optimizer.rs
crates/lamina-huff/src/huff/: compiler.rs  mod.rs  types.rs
crates/lamina-huff/tests/: compiler_test.rs  ir_compiler_test.rs  lib.rs
crates/lamina-ir/: Cargo.toml
crates/lamina-ir/src/: ir.rs  lib.rs  transforms.rs  visitor.rs
crates/lamina/examples/: lamina_to_rust.rs  rust_module.rs  rust_to_lamina.rs
crates/lamina/src/: lib.rs  value.rs
crates/lamina/src/backends/: mod.rs
crates/lamina/src/evaluator/: environment.rs  libraries.rs  library_manager.rs  mod.rs  special_forms.rs
crates/lamina/src/ffi/: mod.rs  rustlib.rs
crates/lamina/tests/: ffi.rs  ffi_integration.rs  lib.rs  libraries.rs  r7rs_core.rs  special_forms.rs
crates/lx/: Cargo.toml  README.md
crates/lx/src/: main.rs
crates/lxc/: Cargo.toml
crates/lxc/src/: backend.rs  lib.rs  main.rs  rustc_integration.rs
docs/: ffi.md
examples/: compile_to_huff.rs  lamina_to_rust.rs  rust_module.rs  rust_to_lamina.rs
examples/output/: Counter.huff  CounterFromIR.huff
src/: embed.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs
src/backends/: mod.rs
src/backends/huff/: bytecode.rs  compiler.rs  mod.rs  opcodes.rs  types.rs
src/evaluator/: environment.rs  libraries.rs  library_manager.rs  mod.rs  procedures.rs  special_forms.rs
src/ffi/: mod.rs  rustlib.rs
tests/: ffi.rs  ffi_integration.rs  lib.rs  primitives.rs  procedures.rs
tests/backends/huff/: compiler_test.rs
