[workspace]
members = [
    "crates/lamina",
    "crates/lamina-huff",
    "crates/lx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lamina Team"]
repository = "https://github.com/yourusername/lamina"
description = "A Scheme-inspired language for smart contracts"

[workspace.dependencies]
logos = "0.13"
thiserror = "1.0"
rustyline = "12.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
clap = { version = "4.4", features = ["derive"] }
lamina = { path = "crates/lamina" }
