[package]
name = "lamina-huff"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Huff backend for the Lamina language"

[dependencies]
lamina.workspace = true
lamina-ir.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true

[[example]]
name = "compile_to_huff"
path = "examples/compile_to_huff.rs"

[[example]]
name = "compile_ir_to_huff"
path = "examples/compile_ir_to_huff.rs"

[lib]
name = "lamina_huff"
path = "src/lib.rs" 